Changelog for modGitHub

modGitHub 1.0.0
===============
- Initial codebase commit