@@ -37,7 +37,7 @@ set_time_limit(0);
 define('PKG_NAME','modGitHub');
 define('PKG_NAME_LOWER','modgithub');
 define('PKG_VERSION','1.0.0');
-define('PKG_RELEASE','alpha1');
+define('PKG_RELEASE','alpha2');
 
 /* define sources */
 $root = dirname(dirname(__FILE__)).'/';
@@ -107,6 +107,21 @@ $vehicle->resolve('file',array(
 ));
 $modx->log(modX::LOG_LEVEL_INFO,'Packaged in resolvers.'); flush();
 $builder->putVehicle($vehicle);
+
+/* load system settings */
+$settings = include_once $sources['data'].'transport.settings.php';
+if (!is_array($settings)) $modx->log(modX::LOG_LEVEL_FATAL,'No settings returned.');
+$attributes= array(
+    xPDOTransport::UNIQUE_KEY => 'key',
+    xPDOTransport::PRESERVE_KEYS => true,
+    xPDOTransport::UPDATE_OBJECT => false,
+);
+foreach ($settings as $setting) {
+    $vehicle = $builder->createVehicle($setting,$attributes);
+    $builder->putVehicle($vehicle);
+}
+$modx->log(modX::LOG_LEVEL_INFO,'Packaged in '.count($settings).' system settings.'); flush();
+unset($settings,$setting,$attributes);
 
 /* now pack in the license file, readme and setup options */
 $builder->setPackageAttributes(array(
