@@ -2,4 +2,5 @@ Changelog for modGitHub
 
 modGitHub 1.0.0
 ===============
+- Add system settings for user authentication to GitHub
 - Initial codebase commit
